完成版の出力とre変換時の処理追加

--- a/articles/sty/review-custom.sty
+++ b/articles/sty/review-custom.sty
@@ -1,1 +1,8 @@
 % for user-defined macro
+
+% //hr の水平線に前後のスペースを追加（文字と線の重なりを防止）
+\newcommand{\reviewhr}{%
+  \vspace{\baselineskip}%
+  \noindent\rule{\textwidth}{0.4pt}%
+  \vspace{\baselineskip}%
+}
